<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>InterArcticle</class>
 <widget class="QMainWindow" name="InterArcticle">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>870</width>
    <height>461</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>861</width>
      <height>411</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="layGen">
     <property name="leftMargin">
      <number>3</number>
     </property>
     <property name="topMargin">
      <number>3</number>
     </property>
     <property name="rightMargin">
      <number>3</number>
     </property>
     <property name="bottomMargin">
      <number>3</number>
     </property>
     <item>
      <widget class="QLabel" name="label">
       <property name="styleSheet">
        <string notr="true">font: 18pt &quot;MS Shell Dlg 2&quot;;</string>
       </property>
       <property name="text">
        <string>Module article</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="Line" name="line">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QPushButton" name="btnDetailA">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>Details article</string>
           </property>
           <property name="icon">
            <iconset>
             <normaloff>img/Usual/Details/view_details.png</normaloff>img/Usual/Details/view_details.png</iconset>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btnDetailF">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>Details fournisseur</string>
           </property>
           <property name="icon">
            <iconset>
             <normaloff>img/Usual/Details/view_details.png</normaloff>img/Usual/Details/view_details.png</iconset>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btnModif">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>Modifier</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btnSupp">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="text">
            <string>Supprimer</string>
           </property>
           <property name="icon">
            <iconset>
             <normaloff>img/Usual/Quit/close_window.png</normaloff>img/Usual/Quit/close_window.png</iconset>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>40</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </item>
       <item>
        <widget class="Line" name="line_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QTableView" name="tableView"/>
       </item>
      </layout>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>870</width>
     <height>22</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
